<resources>
    <string name="app_name">co5025Assignment</string>
    <string name="logo_description">Tic Tac Toe Game Logo</string>
    <string name="menuAccountButton">Login/Register</string>
    <string name="menuNewGameButton">New Game</string>
    <string name="menuStatsButton">Statistics</string>
    <string name="menuSettingsButton">Settings</string>
    <string name="defaultFont" translatable="false">sans-serif-light</string>
    <string name="mainTitle">Tic Tac Toe</string>
    <string name="gamePageTitle">Game</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButtonLink">Register account</string>
    <string name="cpassword_text">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="loginPageTitle">Login</string>
    <string name="registerPageTitle">Register</string>
    <string name="games_played">played:</string>
    <string name="games_label">Games</string>
    <string name="resetStats">Reset Stats</string>
    <string name="games_won">won:</string>
    <string name="games_drawn">drawn:</string>
    <string name="games_lost">lost:</string>
    <string name="stats_screen">Stats</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="impossible_label">Impossible</string>
    <string name="alert_response_positive">Yes</string>
    <string name="alert_response_negative">No</string>
    <string name="difficulty_label">Game Difficulty</string>
    <string name="settings_screen">Settings</string>
    <string name="theme_label">Grid theme</string>
    <string name="player_turn_label">Starting turn</string>
    <string name="player_first_label">1st</string>
    <string name="player_second_label">2nd</string>
    <string name="instructions_label">Instructions</string>
    <string name="close_dialog">Close</string>
    <string name="info_description">Rules icon</string>
    <string name="logout_delete_account">Logout/Delete account</string>
    <string name="light_theme_label">Light</string>
    <string name="dark_theme_label">Dark</string>
    <string name="you_lose">You Lose</string>
    <string name="you_win">You Win</string>
    <string name="you_draw">Draw</string>
    <string name="login_validation">Invalid login details</string>
    <string name="logged_in_statement">Logged in as:</string>
    <string name="register_fail">Failed to register</string>
    <string name="existing_username">The entered Username already exists</string>
    <string name="register_validation">Please enter valid details</string>
    <string name="playing_as_guest">Playing as a guest. Game stats wont be recorded.</string>
    <string name="user_options">What would you like to do?</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="logged_out">Logged out</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_question">Are you sure you want to delete your account?</string>
    <string name="account_deleted_confirmation">Account has been deleted</string>
    <string name="stats_screen_prevention">Only logged in Users can access the Stats screen</string>
    <string name="tic_tac_toe_rules">The objective of Tic Tac Toe is to get 3 Xs in a row. You play on a 3 by 3 grid and each player (You and the Computer) take it in turns until a line of 3 has been made or all 9 cells of the grid have been filled. Various settings for the game can be changed and you can create an account to record your statistics.</string>
    <string name="reset_stats_question">Are you sure you want to reset your stats?</string>
    <string name="red_theme_label">Red</string>
</resources>
