<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_screen_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="0dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/difficulty_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorAccent"
            android:fontFamily="@string/defaultFont"
            android:padding="@dimen/padding_small"
            android:text="@string/difficulty_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/defaultTextSize"/>

            <RadioGroup
                android:id="@+id/difficulty_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">
                <RadioButton
                    android:id="@+id/medium_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onDifficultyClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
                <RadioButton
                    android:id="@+id/hard_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onDifficultyClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
                <RadioButton
                    android:id="@+id/impossible_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/impossible_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onDifficultyClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
            </RadioGroup>

        <TextView
            android:id="@+id/theme_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorAccent"
            android:fontFamily="@string/defaultFont"
            android:padding="@dimen/padding_small"
            android:text="@string/theme_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/defaultTextSize"/>

            <RadioGroup
                android:id="@+id/theme_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">
                <RadioButton
                    android:id="@+id/light_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onThemeClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
                <RadioButton
                    android:id="@+id/dark_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onThemeClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
                <RadioButton
                    android:id="@+id/red_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red_theme_label"
                    android:textSize="@dimen/defaultTextSize"
                    android:padding="@dimen/padding_small"
                    android:fontFamily="@string/defaultFont"
                    android:textColor="@color/colorAccent"
                    android:onClick="onThemeClick"
                    android:layout_marginStart="@dimen/margin_medium"/>
            </RadioGroup>

        <TextView
            android:id="@+id/player_turn_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorAccent"
            android:fontFamily="@string/defaultFont"
            android:padding="@dimen/padding_small"
            android:text="@string/player_turn_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/defaultTextSize" />

        <RadioGroup
            android:id="@+id/player_turn_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <RadioButton
                android:id="@+id/player_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_first_label"
                android:textSize="@dimen/defaultTextSize"
                android:padding="@dimen/padding_small"
                android:fontFamily="@string/defaultFont"
                android:textColor="@color/colorAccent"
                android:onClick="onPlayerTurnClick"
                android:layout_marginStart="@dimen/margin_medium"/>
            <RadioButton
                android:id="@+id/player_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_second_label"
                android:textSize="@dimen/defaultTextSize"
                android:padding="@dimen/padding_small"
                android:fontFamily="@string/defaultFont"
                android:textColor="@color/colorAccent"
                android:onClick="onPlayerTurnClick"
                android:layout_marginStart="@dimen/margin_medium"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
