<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_login_screen"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/defaultFont"
        android:padding="@dimen/padding_small"
        android:text="@string/username_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/defaultTextSize"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorAccent"
        android:fontFamily="@string/defaultFont"
        android:hint="@string/username_text"
        android:inputType="text"
        android:padding="@dimen/padding_small"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/defaultFont"
        android:padding="@dimen/padding_small"
        android:text="@string/password_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/defaultTextSize" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/colorAccent"
        android:fontFamily="@string/defaultFont"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/small_text_size" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:background="@color/colorAccent"
        android:fontFamily="@string/defaultFont"
        android:paddingBottom="@dimen/defaultPadding"
        android:paddingTop="@dimen/defaultPadding"
        android:text="@string/loginButton"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/small_text_size"/>

    <Button
        android:id="@+id/registerAccountButton"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="@dimen/margin_very_large"
        android:layout_marginRight="@dimen/margin_very_large"
        android:background="@color/colorAccent"
        android:fontFamily="@string/defaultFont"
        android:paddingBottom="@dimen/defaultPadding"
        android:paddingTop="@dimen/defaultPadding"
        android:text="@string/registerButtonLink"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/small_text_size"/>

</LinearLayout>
